Fix broken CSS selector

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -40,7 +40,7 @@ blockquote[epub|type~="z3998:letter"] header p.location{
 	font-variant: small-caps;
 }
 
-blockquote[epub|type~="z3998:letter"] header p[epub|type~="se:letter:dateline"]{
+blockquote[epub|type~="z3998:letter"] header p[epub|type~="se:letter.dateline"]{
 	font-style: italic;
 }
 
